style/20221120.css
:root {
	--background: #222;
	--text: #eee;
	--green: #3f1;
	--greenShadow: 0 0 2px rgba(0, 0, 0, 0.5), 0 0 4px rgba(100, 250, 50, 0.4), 0 0 8px rgba(200, 250, 50, 0.2);
	--blue: #6bf;
	--blueShadow: 0 0 5px rgba(150, 200, 250, 0.5);
}

html, body {
	height: 100%;
}

body, h1, h2, h3, p, ol, ul, img {
	margin: 0;
	padding: 0;
	border: none;
}

body {
	max-width: 800px;
	margin: auto;
	padding: 0 1ex;
	background: var(--background);
	font-family: "Lucida Console", Terminal, monospace;
	font-size: 15px;
	line-height: 1.5;
	color: var(--text);
}

h1, h2, h3 {
	font-weight: normal;
	color: var(--green);
	text-shadow: var(--greenShadow);
}

h1, h3 {
	margin: 0 0 0.5em;
}

h2 {
	margin: 1em 0 0.5em;
}

header {
	margin: 2em 0 0;
}

main {
	margin: 1em 0 1em;
}

footer {
	margin: 0 0 2em;
}

section, p {
	padding: 1em;
}

section p {
	padding: 0 0 0 1em;
}

ol, ul {
	padding: 0 2em;
}

a {
	color: var(--blue);
	text-shadow: var(--blueShadow);
}

a.social {
	display: block;
	width: 10em;
	height: 41px;
	margin: 5px 0;
	padding: 0 50px;
	vertical-align: center;
	line-height: 41px;
	background: var(--background) no-repeat left;
}

a#GitHub {
	background-image: url("../images/GitHub.png");
	background-size: 41px 41px;
}

a#Mastodon {
	background-image: url("../images/Mastodon.svg");
	background-size: 41px 41px;
}

